# advent-of-code-2022

./: README.md
cpp/: .gitignore  run.sh
cpp/day-01/: main.cpp
cpp/src/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  utils.hpp
rust/: .gitignore  Cargo.toml  README.md  run_benchmark.sh  run_traced.sh
rust/src/: day_01.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_16.rs  day_18.rs  main.rs  template.rs  utils.rs
