[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
nom = "7.1.1"
rayon = "1.6.1"
rstest = "0.16.0"
tracing = { version = "0.1.37", optional = true }
tracing-chrome = { version = "0.7.0", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }

[features]
traced = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-chrome"]
